[package]
name = "pihole-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus-client = "0.23"
secrecy = { version = "0.10.3", features = ["serde"] }
ahash = "0.8.12"
chrono = "0.4.41"
